--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <div class="switch-container">
       <p>Annually</p>
       <label class="switch-wrap">
-        <input type="checkbox" />
+        <input type="checkbox" id="pricingSwitcher" />
         <div class="switch"></div>
       </label>
       <p>Monthly</p>
@@ -25,10 +25,10 @@
 
   </header>
 
-  <main>
+  <main class="annually">
     <section class="price-box-wrapper light">
       <h3>Basic</h3>
-      <h2><span>$</span>19.99</h2>
+      <h2><span class="dollar">$</span><span class="annually-price">19.99</span><span class="monthly-price">199.99</span></h2>
       <p>500 GB Storage</p>
       <p>2 Users Allowed</p>
       <p>Send up to 3 GB</p>
@@ -36,7 +36,7 @@
     </section>
     <section class="price-box-wrapper dark">
       <h3>Professional</h3>
-      <h2><span>$</span>24.99</h2>
+      <h2><span class="dollar">$</span><span class="annually-price">24.99</span><span class="monthly-price">249.99</span></h2>
       <p>1 TB Storage</p>
       <p>5 Users Allowed</p>
       <p>Send up to 10 GB</p>
@@ -44,12 +44,14 @@
     </section>
     <section class="price-box-wrapper light">
       <h3>Master</h3>
-      <h2><span>$</span>39.99</h2>
+      <h2><span class="dollar">$</span><span class="annually-price">39.99</span><span class="monthly-price">399.99</span></h2>
       <p>2 TB Storage</p>
       <p>10 Users Allowed</p>
       <p>Send up to 20 GB</p>
       <button>Learn more</button>
     </section>
   </main>
+
+  <script src="js/main.js"></script>
 </body>
 </html>
